# nzbidx

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNBOOK.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  orjson.py  sitecustomize.py
services/api/: Dockerfile  pyproject.toml
services/api/src/: nntplib.py  nzbidx_migrations.py
services/api/src/nzbidx_api/: README.md  __init__.py  access_log.py  api_key.py  backfill_release_parts.py  config.py  db.py  errors.py  json_utils.py  log_sanitize.py  main.py  metrics_log.py  middleware_circuit.py  middleware_quota.py  middleware_request_id.py  middleware_security.py  models.py  newznab.py  nzb_builder.py  openapi.py  orjson_response.py  otel.py  rate_limit.py  schema.sql  search.py  search_cache.py  starlette_compat.py  utils.py
services/api/src/nzbidx_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/src/nzbidx_ingest/: __main__.py  config.py  curated_groups.txt  cursors.py  db_migrations.py  embeddings.py  ingest_loop.py  logging.py  main.py  nntp_client.py  nntp_compat.py  parsers.py  resource_monitor.py  segment_schema.py  sql.py
services/api/tests/: conftest.py  test_api_auth.py  test_api_health_status.py  test_api_smoke.py  test_auth_quota.py  test_cache_headers.py  test_caps.py  test_caps_env_toggle.py  test_circuit_breaker.py  test_curated_groups.py  test_error_shape.py  test_health.py  test_health_latencies.py  test_ilm_policy.py  test_ingest_commit_failure.py  test_ingest_nul_bytes.py  test_ingest_reconnect_probe.py  test_ingest_surrogates.py  test_log_scrub.py  test_metrics_log.py  test_music.py  test_music_book.py  test_newznab.py  test_nntp_client_reconnect.py  test_nzb_builder_segments.py  test_nzb_cache.py  test_openapi_route.py  test_pagination.py  test_param_caps.py  test_parsers_extensions.py  test_parsers_segments.py  test_partition_migration.py  test_policy.py  test_query_safety.py  test_rate_limit.py  test_release_partition_migration.py  test_request_id.py  test_search_alias.py  test_search_cache_service.py  test_search_features.py  (+7 more)
services/api/tests/starlette/: applications.py  requests.py  responses.py  routing.py  testclient.py
services/api/tests/starlette/middleware/: cors.py  (+1 more)
(+192 files in other folders)
