[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nzbidx-api"
version = "0.0.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "orjson",
    "opensearch-py",
    "httpx",
    "sqlalchemy>=2",
    "asyncpg",
    "psycopg[binary]>=3.1",
    "redis",
    "python-dotenv",
    "setuptools>=78.1.1",
    "apscheduler",
    "langdetect",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["nntplib"]

[tool.setuptools.package-data]
"nzbidx_api" = ["schema.sql"]
"nzbidx_api.opensearch" = ["*.json"]

