[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nzbidx-api"
version = "0.0.0"
authors = [{ name = "NZBidx Contributors" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opensearch-py",
    "httpx",
    "sqlalchemy>=2",
    "asyncpg",
    "psycopg[binary]>=3.1",
    "redis",
    "python-dotenv",
    "setuptools>=78.1.1",
    "apscheduler",
    "langdetect",
]

[project.optional-dependencies]
orjson = ["orjson"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nzbidx_api" = ["schema.sql"]
"nzbidx_api.opensearch" = ["*.json"]

