[build-system]
# Ensure a recent packaging library is available so the build
# dependencies resolve correctly. Older versions of packaging can raise
# `TypeError: 'NoneType' object is not iterable` during `pip install`.
requires = ["setuptools>=78.1.1", "packaging>=24"]
build-backend = "setuptools.build_meta"

[project]
name = "nzbidx-api"
version = "0.0.0"
authors = [{ name = "NZBidx Contributors" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "sqlalchemy>=2",
    "aiosqlite",
    "asyncpg",
    "psycopg[binary]>=3.1",
    "python-dotenv",
    "setuptools>=78.1.1",
    "apscheduler",
    "langdetect",
    "cachetools",
    "standard-nntplib",
    "cachetools",
]

[project.optional-dependencies]
orjson = ["orjson"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nzbidx_api" = ["schema.sql"]

